fix: make scrollbar work

--- a/apps/festival/static/css/style.css
+++ b/apps/festival/static/css/style.css
@@ -1,45 +1,22 @@
-#container__cau-road-map-bg {
-  /* width: 70%;
-  height: 200px;
-  overflow: hidden; */
-}
-#container__cau-road-map-bg img {
-  /* max-width: 100%;
-  height: auto;
-  display: block; */
-}
-body {
-  /* background-repeat: no-repeat; */
-  /* background-position: center; */
-  /* background-size: cover; */
-
-  /* overflow-y: hidden ! important; */
-  /* overflow-x: hidden ! important; */
-  /* background-color: #f8f8f8; */
-  /*background-image: url('index.png'); */
-  /*background-size: cover;*/
-  /* background-size: contain; */
-  /* background-repeat: no-repeat; */
-  /* background-position: right; */
-
-  background-repeat: no-repeat;
-  background-position: 0% 0%;
-  background-size: contain;
-}
-
 /* Make svg image fit to window */
 html,
 body {
+  /* min-height: 59px; */
+  height: 100vh;
+  /* width: 100vw; */
   margin: 0;
-  padding: 0;
-  overflow: hidden;
+  overflow-y: auto;
+}
+#container__cau-road-map-bg {
+  /* min-height: 59px; */
+  height: 100vh;
+  /* width: 100vw; */
+  margin: 0;
+  overflow-y: auto;
 }
 svg {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  display:block;
+  /* overflow: hidden; */
 }
 image {
   position: fixed;
